chamber fixing footer iframe contrast issue

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -270,6 +270,7 @@ footer div span{
 }
 
 footer iframe{
+    color: #000;
     width:300px;
     height: 300px;
 }
